OutOfMemoryException hunt